--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         </div>
     </div>
 </nav>
-<div style="background-color: lightseagreen">
-<div class="d-flex justify-content-end">
+<main style="background-color: lightseagreen">
+    <div class="d-flex justify-content-end">
     <div class="collapse w-25" id="collapseExample" style="border: 2px solid black; border-radius: 10px">
         <div class="card card-body">
             <form class="d-flex" role="search">
@@ -44,7 +44,7 @@
         </div>
     </div>
 </div>
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -78,7 +78,7 @@
     <div class="container p-0 w-90">
         <div id="coffees" class="row justify-content-center p-0"></div>
     </div>
-</div>
+</main>
     <script src="main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
