--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Coffee Shop</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css">
@@ -34,7 +34,7 @@
                 <label>
                     <label for="roast-selection"></label>
                     <select class="form-select" id="roast-selection">
-                        <option selected>Select Roast</option>
+                        <option value="" selected>Select Roast</option>
                         <option value="light">Light</option>
                         <option value="medium">Medium</option>
                         <option value="dark">Dark</option>
