organized and labeled the html and the js files

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css">
 </head>
 <body>
+<!--Navbar-->
 <nav class="navbar">
     <div class="d-flex w-100">
         <div class="d-flex justify-content-start w-50 ps-3">
@@ -22,7 +23,9 @@
         </div>
     </div>
 </nav>
+<!--main page-->
 <main>
+<!--Search dropdown-->
     <div class="d-flex justify-content-end">
     <div class="collapse w-25" id="collapseExample">
         <div class="card card-body">
@@ -44,6 +47,7 @@
         </div>
     </div>
 </div>
+<!--    Modal-->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -74,6 +78,7 @@
         </div>
     </div>
 </div>
+<!--    page header and generated cards-->
     <h1 class="text-center pt-3" id="pageHeader">Coffee!</h1>
     <div class="container p-0 w-90">
         <div id="coffees" class="row justify-content-center p-0"></div>
