got the all dropdown to work yay

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                     <label for="roast-selection"></label>
                     <select class="form-select" id="roast-selection">
                         <option value="" selected>Select Roast</option>
+                        <option value="all">All</option>
                         <option value="light">Light</option>
                         <option value="medium">Medium</option>
                         <option value="dark">Dark</option>
