--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="card card-body">
             <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" id="search">
-                <button class="btn btn-outline-success" type="submit" id="submit">Search</button>
+                <button class="btn btn-outline-primary" type="submit" id="submit">Search</button>
             </form>
             <form>
                 <label>
@@ -73,8 +73,8 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" id="closeModal" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" id="addCardBtn" class="btn btn-primary">Submit</button>
+                <button type="button" id="closeModal" class="btn btn-outline-primary" data-bs-dismiss="modal">Close</button>
+                <button type="button" id="addCardBtn" class="btn btn-outline-primary">Submit</button>
             </div>
         </div>
     </div>
